Improve build scripts